# Enterprise-RAG-system-Stripe-Docs

./: .gitignore  Learnings.ipynb  RAG Experiments.ipynb  README.md  Ref_file.py  pyproject.toml  requirement.txt
logs/: logger.py
notebooks/: Learnings.ipynb  RAG Experiments.ipynb
pipeline/: run.py
src/ragpkg/config/: settings.py
src/ragpkg/extraction/: extract.py  tables.py
src/ragpkg/logs/: logger.py
src/ragpkg/pipeline/: extract.py  run.py
